--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@
   background-image: url("bg1.jpg");
 }
 
-#text2 {
+#storePage {
   height: 800px;
   padding: 0;
   margin: 0;
@@ -235,16 +235,48 @@
   position: relative;
 }
 
-#anch2 {
+/* Store Page */
+#storeTitle {
   text-align: center;
   color: white;
+  margin-top: 60px;
+  margin-bottom: 50px;
+  text-align: center;
+  color: white;
+  font-size: 100px;
+  font-family: 'Indie Flower', cursive;
+}
 
-  color: #fff;
-    text-shadow:
-    -1px -1px 0 black,
-    1px -1px 0 black,
-    -1px 1px 0 black,
-    1px 1px 0 black;
+.storeContent {
+  margin-top: 10px;
+  margin-left: 0;
+  margin-right: 0;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  padding-left: 30px ;
+  padding-right: 30px ;
+  font-size: 20px;
+  font-family: 'Indie Flower', cursive;
+  position: relative;
+  background-color: white;
+  color: black;
+  z-index: 10;
+}
+
+#storeColumns {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-top: 0;
+  margin-left: 0;
+  padding-top: 0;
+  padding-bottom: 0;
+  padding-left: 20px;
+  padding-right: 20px;
+  font-size: 20px;
+  background-color: white;
+  z-index: 10;
+  position: relative;
 }
 
 #anch3 {
@@ -276,15 +308,19 @@
   border: none;
 }
 
+/* Sidebar Adjustments */
 #sideBarText {
   color: white;
-  font-size: 15px;
+  font-size: 25px;
+  font-family: 'Courgette', cursive;
 }
 
 #sideBarTitle {
   text-align: center;
   color: white;
   font-size: 30px;
+  font-weight: bold;
+  font-family: 'Indie Flower', cursive;
   background-color: #464a4c;
 }
 
